--- a/public/manifest.json
+++ b/public/manifest.json
@@ -7,6 +7,7 @@
   "background_color": "#ffffff",
   "theme_color": "#1976d2",
   "description": "Zikasha CRM allow you to manage your inquiries with your team and customers.",
+   "display_override": ["window-controls-overlay"],
   "icons": [
     {
       "src": "icons/512.png",
