Implement inquiry notifications feature

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@tailwindcss/vite": "^4.1.8",
@@ -39,6 +40,10 @@
     "sonner": "^2.0.4",
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.8",
+    "vite-plugin-pwa": "^1.0.3",
+    "web-push": "^3.6.7",
+    "workbox-webpack-plugin": "^7.3.0",
+    "workbox-window": "^7.3.0",
     "xlsx": "^0.18.5",
     "zod": "^3.25.42"
   },
